llvm/test/tools/llvm-ifs/conflict-header-triple.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/object.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# CHECK-IFS: error: Interface Stub: Triple Mismatch.
# CHECK-IFS-NEXT: Filenames:
# CHECK-IFS-NEXT: Triple Values: mips-unknown-linux x86_64-unknown-linux-gnu

--- !ifs-v1
IfsVersion: 3.0
Target:          mips-unknown-linux
Symbols:
  - { Name: a, Type: Func }
...
